Updated js and css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
          </section>
          <section id="searchresult">
+            <p id="error"/>
             <ul>
                <li id="01" class="locale">
                   <p class="lat">44.137734</p>
