--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
             <p id="error"/>
             <ul>
                <li id="01" class="locale">
-                  <p class="lat">44.137734</p>
-                  <p class="long">12.240359</p>
+                  <p class="lat">44.137689</p>
+                  <p class="long">12.240674</p>
                   <p class="distanza"/>
                   <p class="keyword">Ristorante</p>
                   <p class="keyword">Pizzeria</p>
                   <p class="keyword">Rocca</p>
                   <p>Ristorante Pizzeria La Rocca</p>
-                  <a href="http://www.pizzerialarocca.net/">http://www.pizzerialarocca.net/</a>
+                  <p>
+                     <a href="http://www.pizzerialarocca.net/">http://www.pizzerialarocca.net/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.137689,12.240674">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="02" class="locale">
                   <p class="lat">44.140845</p>
@@ -50,6 +55,9 @@
                   <p class="keyword">Pizzeria</p>
                   <p class="keyword">Lucullo</p>
                   <p>Pizzeria Lucullo</p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.140845,12.247547">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="03" class="locale">
                   <p class="lat">44.143809</p>
@@ -59,7 +67,12 @@
                   <p class="keyword">America</p>
                   <p class="keyword">Graffiti</p>
                   <p>America Graffiti Diner Restaurant Cesena</p>
-                  <a href="http://www.americagraffiti.it/">http://www.americagraffiti.it/</a>
+                  <p>
+                     <a href="http://www.americagraffiti.it/">http://www.americagraffiti.it/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.143809,12.248674">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="04" class="locale">
                   <p class="lat">44.135037</p>
@@ -69,7 +82,12 @@
                   <p class="keyword">Pizzeria</p>
                   <p class="keyword">Stalla</p>
                   <p>Pizzeria La Stalla</p>
-                  <a href="http://www.ristorantelastalla.eu/">http://www.ristorantelastalla.eu/</a>
+                  <p>
+                     <a href="http://www.ristorantelastalla.eu/">http://www.ristorantelastalla.eu/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.135037,12.238410">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="05" class="locale">
                   <p class="lat">44.135037</p>
@@ -78,6 +96,9 @@
                   <p class="keyword">Pizzeria</p>
                   <p class="keyword">Portico</p>
                   <p>Pizzeria Il Portico</p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.135037,12.238410">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="06" class="locale">
                   <p class="lat">44.145927</p>
@@ -87,7 +108,12 @@
                   <p class="keyword">Pizzeria</p>
                   <p class="keyword">Castello</p>
                   <p>Ristorante Quel Castello Di Diegaro</p>
-                  <a href="http://www.quelcastello.it/it/">http://www.quelcastello.it/it/</a>
+                  <p>
+                     <a href="http://www.quelcastello.it/it/">http://www.quelcastello.it/it/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.145927,12.214123">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="07" class="locale">
                   <p class="lat">44.138042</p>
@@ -96,6 +122,9 @@
                   <p class="keyword">Gelateria</p>
                   <p class="keyword">Marilena</p>
                   <p>Gelateria Marilena</p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.138042,12.238713">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="08" class="locale">
                   <p class="lat">44.136302</p>
@@ -105,7 +134,12 @@
                   <p class="keyword">Puro</p>
                   <p class="keyword">Bio</p>
                   <p>Puro e Bio</p>
-                  <a href="http://gelatieri-indipendenti.com/">http://gelatieri-indipendenti.com/</a>
+                  <p>
+                     <a href="http://gelatieri-indipendenti.com/">http://gelatieri-indipendenti.com/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.136302,12.248637">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="09" class="locale">
                   <p class="lat">44.142631</p>
@@ -114,7 +148,12 @@
                   <p class="keyword">Gelateria</p>
                   <p class="keyword">Cremeria</p>
                   <p>La Cremeria</p>
-                  <a href="http://gelatieri-indipendenti.com/">http://gelatieri-indipendenti.com/</a>
+                  <p>
+                     <a href="http://gelatieri-indipendenti.com/">http://gelatieri-indipendenti.com/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.142631,12.251201">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="10" class="locale">
                   <p class="lat">44.141830</p>
@@ -123,7 +162,12 @@
                   <p class="keyword">Bar</p>
                   <p class="keyword">Ex Cafe</p>
                   <p>L'Ex Cafe'</p>
-                  <a href="http://www.excafe.it/">http://www.excafe.it/</a>
+                  <p>
+                     <a href="http://www.excafe.it/">http://www.excafe.it/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.141830,12.239507">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="11" class="locale">
                   <p class="lat">44.135855</p>
@@ -132,6 +176,9 @@
                   <p class="keyword">Bar</p>
                   <p class="keyword">Roma</p>
                   <p>Bar Roma</p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.135855,12.247575">Link a Google Maps</a>
+                  </p>
                </li>
                <li id="12" class="locale">
                   <p class="lat">44.137888</p>
@@ -140,7 +187,12 @@
                   <p class="keyword">Bar</p>
                   <p class="keyword">Capitano</p>
                   <p>Bar Capitano</p>
-                  <a href="http://www.barcapitano.it/">http://www.barcapitano.it/</a>
+                  <p>
+                     <a href="http://www.barcapitano.it/">http://www.barcapitano.it/</a>
+                  </p>
+                  <p>
+                     <a href="http://www.google.com/maps/place/44.137888,12.243637">Link a Google Maps</a>
+                  </p>
                </li>
             </ul>
          </section>
